<resources>
    <string name="app_name">DecliningBudgeter</string>
    <string name="add_account">Add Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="balance">Balance</string>
    <string name="name_of_account">Name of Account</string>
    <string name="account_owner">Account Owner</string>
    <string name="finished">Finished!</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="set_date">Set Date</string>
    <string name="purchase_amount">Purchase Amount</string>
    <string name="mm_dd_yyyy">MM-DD-YYYY</string>
</resources>
