<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_of_account"
            android:id="@+id/account_name"
            android:inputType="text"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account_owner"
            android:id="@+id/account_owner"
            android:inputType="text"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/balance"
            android:id="@+id/account_balance"
            android:inputType="number|numberDecimal"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_date"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mm_dd_yyyy"
                android:id="@+id/start_date"
                android:inputType="date"/>

        <!--<Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_date"
            android:id="@+id/s_d_button"/> -->

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_date"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mm_dd_yyyy"
            android:id="@+id/end_date"
            android:inputType="date"/>

        <!-- <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_date"
            android:id="@+id/e_d_button"/> -->

    </LinearLayout>


</LinearLayout>